[EFL][WK2] Regression (r128163) https://bugs.webkit.org/show_bug.cgi?id=96610

Patch by Regina Chung <heejin.r.chung@samsung.com> on 2012-09-17
Reviewed by Gyuyoung Kim.

While removing compile warnings r128163 changed the logic of code for entering
accelerated compositing mode, resulting in never being able to enter it.
Changed back to the correct code and fixed the compile warning by using an
appropriate EINA macro.

* UIProcess/API/efl/ewk_view.cpp:
(ewk_view_accelerated_compositing_mode_enter): Changed EINA_SAFETY_ON_NULL_RETURN_VAL to *if* condition statement.

Canonical link: https://commits.webkit.org/114910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128844 268f45cc-cd09-0410-ab3c-d52691b4dbfc